# coding-agent

./: .gitignore  PROCESS_PROTECTION_README.md  README.md  TODO.md  environment.yml  pyproject.toml  start.bat  test_400_error.py
.claude/: settings.json
codo/: __init__.py  __main__.py  constants.py  main.py  query.py  query_engine.py  runtime_protocol.py  tools_registry.py
codo/cli/: interactive_dialogs.py
codo/commands/: __init__.py  base.py  skills.py
codo/constants/: prompts.py  tool_limits.py
codo/entrypoints/: cli.py
codo/evals/: __init__.py  dataset_extract.py  module_runner.py  runner.py  schema.py
codo/services/: attachments.py  attachments_config.py  input_history.py  plans.py  token_estimation.py
codo/session/: __init__.py  export.py  query.py  restore.py  storage.py  title.py  types.py
codo/team/: __init__.py  background_tasks.py  enhanced_agent.py  mailbox.py  message_types.py  subagent_context.py  team_manager.py
codo/tools/: __init__.py  base.py  receipts.py  types.py
codo/types/: hooks.py  orchestration.py  permissions.py  runtime.py
codo/utils/: abort_controller.py  config.py  diagnostics.py  diff.py  file_read.py  fs_operations.py  generators.py  git_diff.py  path.py  serialize.py  settings.py  tool_result_storage.py
docs/: PROCESS_PROTECTION.md  PROCESS_PROTECTION_GUIDE.md  RUNTIME_READING_GUIDE.md  conversation_loop_design_walkthrough.md  format.md  session_design_walkthrough.md  streaming_abort_runtime_design_walkthrough.md  tool_design_walkthrough.md
docs/alignment/: ATTACHMENT_ISOLATION.md  EXECUTION_CHAIN_READING_ROUTE.md  QUERY_LOOP_COMPLETION_SUMMARY.md
scripts/: repair_session_parents.py
tests/: conftest.py  fake_anthropic_stream.py  test_query_tool_receipts.py
tests/cli/: test_interactive_dialogs.py  test_main_textual_entry.py  test_tui_bridge.py  (+3 more)
typings/: pypdf.pyi  webview.pyi
workbench-app/: MARKDOWN_FEATURE.md  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.tsbuildinfo  tsup.config.ts  vite.config.ts
workbench-prototype/: index.html  run.py  styles.css
(+229 files in other folders)
